# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.462 2005/12/16 19:32:31 wolf31o2 Exp $

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Fixed up spacing/coding style on livecd-stage*.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/grp/grp-controller.sh,
  targets/grp/grp-preclean-chroot.sh:
  Fixed up spacing/coding style on grp.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/embedded/embedded-preclean-chroot.sh:
  Fixed up spacing/coding style on embedded.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py,
  targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  targets/support/create-iso.sh, targets/support/filesystem-functions.sh,
  targets/support/functions.sh:
  Removing extra line from x86.py, fixing up comments, spacing, and coding
  style in targets/support through functions.sh

  16 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  Fix more tab/spacing issues .. trying to make everything use tabs

  16 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/stage1_target.py, modules/stage2_target.py,
  modules/stage3_target.py, modules/stage4_target.py:
  Fix warning message in stage1,2 and 3. Fix tab spacing issues in various
  other files

  14 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Add envscript warning to aid users who may not know what they are doing

  13 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,