@@ -1,7 +1,8 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-chroot.sh,v 1.4 2005/12/09 19:03:07 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-chroot.sh,v 1.5 2005/12/19 15:03:25 wolf31o2 Exp $
+
 . /tmp/chroot-functions.sh
 
 update_env_settings
@@ -9,7 +10,7 @@ update_env_settings
 setup_myfeatures
 setup_myemergeopts
 
-# setup our environment
+# Setup our environment
 export FEATURES="${clst_myfeatures}"
 export USE_ORDER="env:pkg:conf:defaults"
 
